--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "bulma": "0.6.1",
+    "node-sass": "4.7.1",
+    "sass-loader": "6.0.6",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
