--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "0.17.1",
     "bulma": "0.6.1",
     "node-sass": "4.7.1",
     "sass-loader": "6.0.6",
     "vue": "^2.5.2",
+    "vue-axios": "2.0.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
