--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "sass-loader": "6.0.6",
     "vue": "^2.5.2",
     "vue-axios": "2.0.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-socket.io": "2.1.1-a"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
